# web-fm-keyboard

./: .gitmodules  .prototools  LICENSE  README.md
.github/workflows/: rust.yml
synth/: .gitignore  Cargo.toml  build.rs
synth/examples/: main.rs
synth/src/: buffer.rs  lib.rs  note.rs  tone.rs  ymfm_bridge.rs
synth/src/ymfm_bridge/: ymfm_bridge.cpp  ymfm_bridge.hpp
synth_em/: .gitignore  CMakeLists.txt  Dockerfile  build.sh
synth_em/src/: instrument.hpp  keyboard.hpp  note.hpp  synth2.cpp
synth_em/src/chip/: ym2608.cpp  ym2608.hpp
web/: biome.json  next.config.ts  package.json  pnpm-lock.yaml
web/app/: page.tsx
web/components/: types.ts
web/components/SynthWorker/: index.ts  index.tsx  synth-worker.ts
web/lib/synth/: synth.d.ts  synth.js  synth.wasm
web/public/wasm/: synth.wasm
